# solana-atomic-arbitrage-bot

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  config.example.toml
docs/: DEPLOYMENT.md  ONCHAIN_DEPLOYMENT.md
migrations/: 001_init.sql  002_add_base_factor.sql  003_add_bitmap_extension.sql  004_add_reserve_owner.sql  005_add_cpmm_whirlpool_pools.sql
monitoring/: dashboards.yml  datasources.yml  docker-compose.yml  grafana-dashboard.json  prometheus.yml  vector.toml
programs/arbitrage/: Cargo.toml
programs/arbitrage/src/: accounting.rs  constants.rs  constants_tests.rs  error.rs  lib.rs
programs/arbitrage/src/cpi/: cpmm.rs  dlmm.rs  mod.rs  pump_swap.rs  whirlpool.rs
programs/arbitrage/src/instructions/: dex_cpmm.rs  dex_dlmm.rs  dex_pumpswap.rs  dex_whirlpool.rs  mod.rs  orchestrate.rs  route_dlmm_to_pump.rs  route_pump_to_dlmm.rs
programs/arbitrage/src/pricing/: dlmm.rs  mod.rs  pump_swap.rs
programs/arbitrage/tests/: route_dlmm_to_pump_happy.rs  route_insufficient_profit.rs  route_pump_to_dlmm_happy.rs  route_residual_meme.rs
programs/arbitrage/tests/common/: mod.rs
scripts/: create_alt.sh  deploy_client.sh  deploy_full.sh  warmup_dlmm.py  windows-dev.ps1
scripts/devnet_smoke/: Cargo.toml
src/: constants.rs  discovery.rs  main.rs  main_loop.rs  metrics.rs  persistence.rs  price.rs  whitelist.rs
src/arbitrage/: mod.rs  scanner.rs  scanner_queries.rs  types.rs
src/config/: mod.rs  types.rs
src/executor/: confirmation.rs  jito.rs  mod.rs  nonce.rs  rpc_pool.rs  sender.rs
src/risk/: mod.rs
(+42 files in other folders)
