[package]
name = "mevbot"
version = "0.1.0"
edition = "2021"
description = "Solana Cross-Venue Atomic Arbitrage Bot"

[dependencies]
solana-sdk = "2.1"
solana-client = "2.1"
solana-transaction-status = "2.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
tracing-log = "0.2"
config = { version = "0.14", features = ["toml"] }
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
rand = "0.8"
bincode = "1.3"
prometheus = "0.13"
base64 = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }
yellowstone-grpc-client = "13.1.1"
yellowstone-grpc-proto = "12.5.0"
tonic = { version = "0.14", features = ["zstd"] }
dashmap = "6.2.1"
