[package]
name = "arbitrage"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
mainnet = []

[dependencies]
solana-program = ">=1.17.4, <1.19"

[dev-dependencies]
solana-program-test = ">=1.17.4, <1.19"
solana-sdk = ">=1.17.4, <1.19"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
